# INF200-2019

./: .gitignore  README.md
Project/mapplot/: mapplot.py
docs/: _config.yml  index.md  style.scss
docs/_pages/: about.md  search.md
docs/_posts/: 2019-09-02-about-inf200.md  2019-09-03-setting-up-github.md  2019-09-09-new-ta-and-tutorials.md  2019-09-09-tutorial-groups.md  2019-09-17-new-videos.md  2019-09-17-tentative-schedule.md  2019-09-24-coursework-requirements.md  2019-10-01-Pair-programming-groups.md  2019-10-29-exam-signup.md  2019-12-17-About-january.md
docs_old/: index.md
exam/: information_about_oral_exam.md
lectures/J01/: INF200_H18_J01.ipynb
lectures/J02/: INF200_H18_J02.ipynb
lectures/J03/: INF200_H18_J03.ipynb
lectures/J04/: INF200_H17_J04.ipynb
lectures/J05/: INF200_H18_J05_ModelDynamics.ipynb  INF200_H18_J05_Visualization.ipynb
lectures/J07/: Lazy evaluation.ipynb
lectures/L01/: INF200_H18_L01.ipynb  INF200_H19_L01.ipynb
lectures/L02/: INF200_H19_L02.ipynb  Inclass notes.ipynb
lectures/L03/: INF200_H19_L03.ipynb
lectures/L04/inf200_lc/: LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
lectures/L04/inf200_lc/.github/: ISSUE_TEMPLATE.md
lectures/L04/inf200_lc/src/inf200_lc/: __init__.py  bubble_sort.py  median.py
lectures/L04/inf200_lc/tests/: __init__.py  test_bubble_sort.py  test_median.py
lectures/L05/: INF200_H18_L05.ipynb
lectures/L06/: L06.ipynb  Untitled.ipynb
lectures/L07/: notes_from_lecture.ipynb  plans_for_lecture.ipynb
lectures/L11/: weather_data.xlsx  (+1 more)
(+120 files in other folders)
