

[metadata]
name = inf200_lc
keywords=inf200_lc
version = 0.0.1
license = "MIT license",
description = Live coding from INF200 lectures at NMBU
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url=https://github.com/yngvem/inf200_lc
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where=src



[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:src/inf200_lc/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 79


